--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -212,36 +212,6 @@ textarea::placeholder {
   width: 170px;
   margin: 0 0 0 10px;
 }
-.modBtn--backBtn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 40px auto;
-}
-.modBtn--backBtn .btn--pageback {
-  display: inline-block;
-  vertical-align: middle;
-  width: 180px;
-  height: 40px;
-  margin: 0;
-  background: url(/assets/img/common/btn_back_page.svg) no-repeat 0 0;
-  background-size: 100%;
-  text-indent: -9999px;
-}
-.modBtn--deleteBtn {
-  display: flex;
-  margin: 20px 0;
-}
-.modBtn--deleteBtn .btn--delete {
-  display: inline-block;
-  vertical-align: middle;
-  width: 180px;
-  height: 40px;
-  margin: 0;
-  background: url(/assets/img/common/btn_delete.svg) no-repeat 0 0;
-  background-size: 100%;
-  text-indent: -9999px;
-}
 
 .modIconUpload {
   display: inline-block;
@@ -369,7 +339,7 @@ textarea::placeholder {
   display: block;
   width: 350px;
   height: 36px;
-  margin: 0 0 20px;
+  margin: 0 0 30px;
   padding: 0;
   border: 1px solid #ccc;
   background: #fff;
@@ -380,7 +350,7 @@ textarea::placeholder {
 }
 .modFormSearch .searchForm-input {
   margin: 0;
-  padding: 5px;
+  padding: 5px 38px 5px 5px;
   width: 100%;
   height: 35px;
 }
@@ -895,6 +865,45 @@ textarea::placeholder {
   transform: translate(-2px, 3px) rotateZ(-45deg);
   transform-origin: 1px 1px;
   background: #FFFFFF;
+}
+
+.modImgBtn {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  -wewbkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+.modImgBtn--centerBtn {
+  align-items: center;
+  justify-content: center;
+}
+.modImgBtn--leftBtn {
+  text-align: left;
+}
+.modImgBtn:hover {
+  opacity: 0.7;
+}
+.modImgBtn .btn--pageback {
+  display: inline-block;
+  vertical-align: middle;
+  width: 180px;
+  height: 40px;
+  margin: 0;
+  background: url(/assets/img/common/btn_back_page.svg) no-repeat 0 0;
+  background-size: 100%;
+  text-indent: -9999px;
+}
+.modImgBtn .btn--delete {
+  display: inline-block;
+  vertical-align: middle;
+  width: 180px;
+  height: 40px;
+  margin: 0;
+  background: url(/assets/img/common/btn_delete.svg) no-repeat 0 0;
+  background-size: 100%;
+  text-indent: -9999px;
 }
 
 * {
