--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -81,43 +81,7 @@
       margin: 0 0 0 10px;
     }
   }
-  &--backBtn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 40px auto;
-    // ボタン
-    .btn {
-      &--pageback {
-        display: inline-block;
-        vertical-align: middle;
-        width: 180px;
-        height: 40px;
-        margin: 0;
-        background: url(#{$dir_img}common/btn_back_page.svg) no-repeat 0 0;
-        background-size: 100%;
-        text-indent: -9999px;
-      }
-    }
-  }
 
-  &--deleteBtn {
-    display: flex;
-    margin: 20px 0;
-    // ボタン
-    .btn {
-      &--delete {
-        display: inline-block;
-        vertical-align: middle;
-        width: 180px;
-        height: 40px;
-        margin: 0;
-        background: url(#{$dir_img}common/btn_delete.svg) no-repeat 0 0;
-        background-size: 100%;
-        text-indent: -9999px;
-      }
-    }
-  }
 }
 
 //アイコン
@@ -261,7 +225,7 @@
     display: block;
     width: 350px;
     height: 36px;
-    margin: 0 0 20px;
+    margin: 0 0 30px;
     padding: 0;
     border: 1px solid #ccc;
     background: #fff;
@@ -271,7 +235,7 @@
       position: relative;
       &-input {
         margin: 0;
-        padding: 5px;
+        padding: 5px 38px 5px 5px;
         width: 100%;
         height: 35px;
       }
@@ -814,6 +778,49 @@
       transform: translate(-2px, 3px) rotateZ(-45deg);
       transform-origin: 1px 1px;
       background: #FFFFFF;
+    }
+  }
+}
+
+// 画像ボタン
+.modImgBtn{
+  display: flex;
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  @include transition();
+  // center
+  &--centerBtn {
+    align-items: center;
+    justify-content: center;
+  }
+  // left
+  &--leftBtn {
+    text-align: left;
+  }
+  &:hover{
+    opacity: 0.7;
+  }
+  .btn {
+    &--pageback {
+      display: inline-block;
+      vertical-align: middle;
+      width: 180px;
+      height: 40px;
+      margin: 0;
+      background: url(#{$dir_img}common/btn_back_page.svg) no-repeat 0 0;
+      background-size: 100%;
+      text-indent: -9999px;
+    }
+    &--delete {
+      display: inline-block;
+      vertical-align: middle;
+      width: 180px;
+      height: 40px;
+      margin: 0;
+      background: url(#{$dir_img}common/btn_delete.svg) no-repeat 0 0;
+      background-size: 100%;
+      text-indent: -9999px;
     }
   }
 }
