--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -45,6 +45,10 @@
     margin: 0 0 15px;
     padding: 0 0 5px;
   }
+  &Lv3{
+    font-size: 16px;
+    margin: 20px 0;
+  }
 }
 
 //ボタン
@@ -75,6 +79,43 @@
     >li{
       width: 170px;
       margin: 0 0 0 10px;
+    }
+  }
+  &--backBtn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px auto;
+    // ボタン
+    .btn {
+      &--pageback {
+        display: inline-block;
+        vertical-align: middle;
+        width: 180px;
+        height: 40px;
+        margin: 0;
+        background: url(#{$dir_img}common/btn_back_page.svg) no-repeat 0 0;
+        background-size: 100%;
+        text-indent: -9999px;
+      }
+    }
+  }
+
+  &--deleteBtn {
+    display: flex;
+    margin: 20px 0;
+    // ボタン
+    .btn {
+      &--delete {
+        display: inline-block;
+        vertical-align: middle;
+        width: 180px;
+        height: 40px;
+        margin: 0;
+        background: url(#{$dir_img}common/btn_delete.svg) no-repeat 0 0;
+        background-size: 100%;
+        text-indent: -9999px;
+      }
     }
   }
 }
@@ -144,15 +185,6 @@
     background: url(#{$dir_img}common/icon_cal.svg) no-repeat 0 0;
     background-size: 100%;
   }
-  &Select{
-    display: inline-block;
-    vertical-align: middle;
-    width: 10px;
-    height: 6px;
-    margin: 0 0 0 5px;
-    background: url(#{$dir_img}common/icon_select.svg) no-repeat 0 0;
-    background-size: 100%;
-  }
   &Delete{
     display: inline-block;
     vertical-align: middle;
@@ -160,6 +192,15 @@
     height: 6px;
     margin: 0 5px 0 0;
     background: url(#{$dir_img}common/icon_delete.svg) no-repeat 0 0;
+    background-size: 100%;
+  }
+  &Tag{
+    display: inline-block;
+    vertical-align: middle;
+    width: 12px;
+    height: 12px;
+    margin: 0 5px 0 0;
+    background: url(#{$dir_img}common/icon_tag.svg) no-repeat 0 0;
     background-size: 100%;
   }
 }
@@ -202,7 +243,7 @@
       justify-content: flex-end;
       margin: 0 0 0 auto;
       >li{
-        width: 170px;
+        min-width: 170px;
         margin: 0 0 0 10px;
       }
     }
@@ -229,6 +270,7 @@
     background: #fff;
     font-size: 14px;
     &--textarea {
+      width: 100%;
       min-height: 100px;
     }
   }
@@ -282,10 +324,90 @@
     }
   }
 
-  //Check
-  &Check{
+  //Select
+    &Select {
+      position: relative;
+      display: inline-block;
+      padding: 6px 10px;
+      border: 1px solid #ccc;
+      background: #fff;
+      font-size: 14px;
+      position: relative;
+      z-index: 1;
+      &::after {
+        position: absolute;
+        content: '';
+        width: 7px;
+        height: 7px;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%) rotate(45deg);
+        border-bottom: 2px solid #333;
+        border-right: 2px solid #333;
+        z-index: -1;
+      }
+      select{
+        padding-right: 16px;
+      }
+      &__l{
+        width: 180px;
+      }
+    }
+    &Calendar {
+      display: inline-block;
+      padding: 6px 10px;
+      border: 1px solid #ccc;
+      background: #fff;
+      font-size: 14px;
+    }
+
+  //checkbox
+  &Checkbox {
     position: relative;
     cursor: pointer;
+    >span{
+      position: relative;
+      padding: 0 0 0 25px;
+      &::before,
+      &::after{
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        border-radius: 100%;
+        transform: translateY(-50%);
+      }
+      &::before{
+        width: 18px;
+        height: 18px;
+        border: 1px solid #ccc;
+        background: #fff;
+      }
+      &::after{
+        opacity: 0;
+        width: 8px;
+        height: 8px;
+        left: 6px;
+        background: $color_green;
+      }
+    }
+    >input{
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      &:checked + span::after{
+        opacity: 1;
+      }
+    }
+    &List{
+      display: flex;
+      align-items: center;
+      &__item{
+        margin: 0 15px 0 0;
+      }
+    }
   }
 
   //box
@@ -308,22 +430,6 @@
     &__input{
       width: 200px;
       margin: 10px 0 0;
-      .select {
-        position: relative;
-        display: inline-block;
-        padding: 6px 10px;
-        border: 1px solid #ccc;
-        background: #fff;
-        font-size: 14px;
-      }
-      .calendar {
-      width: 240px;
-      display: inline-block;
-      padding: 6px 10px;
-      border: 1px solid #ccc;
-      background: #fff;
-      font-size: 14px;
-      }
       &__line{
         display: flex;
         align-items: center;
@@ -429,27 +535,15 @@
         }
         .body {
           width: calc(100% - 200px);
+          input[type="text"]{
+            width: 200px;
+          }
         }
       }
     }
     .input {
       display: inline-block;
       width: 100px;
-    }
-    .select {
-      position: relative;
-      display: inline-block;
-      padding: 6px 10px;
-      border: 1px solid #ccc;
-      background: #fff;
-      font-size: 14px;
-    }
-    .calendar {
-      display: inline-block;
-      padding: 6px 10px;
-      border: 1px solid #ccc;
-      background: #fff;
-      font-size: 14px;
     }
   }
   &02 {
@@ -458,7 +552,7 @@
     margin: 0 -40px 0 0;
     &__item {
       width: 260px;
-      margin: 0 40px 30px 0;
+      margin: 0 30px 30px 0;
       &__inner {
         display: flex;
         flex-direction: column;
@@ -525,9 +619,125 @@
       }
     }
   }
+  &03 {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    &__item {
+      width: 285px;
+      margin: 0 20px 25px 0;
+      &:nth-child(4n) {
+        margin: 0 0 25px 0;
+      }
+      &__tag {
+        width: 224px;
+        margin: 0 20px 25px 0;
+        &:nth-child(5n) {
+          margin: 0 0 25px 0;
+        }
+      }
+      &__inner {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        .title {
+        }
+        .body {
+          margin: auto 0 0;
+          &__tag {
+            width: 198px;
+            margin: 0 0 0 15px;
+            &--upLoad {
+              width: 191px;
+              margin: 0 0 0 33px;
+            }
+          }
+          &__cate,
+          &__tag {
+            height: 50px;
+            border: 1px solid #707070;
+            &__inner {
+              position: relative;
+              width: 100%;
+              height: 100%;
+            }
+            &--upLoad {
+              border: 1px dashed #ccc;
+            }
+            .btn {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              position: absolute;
+              width: 28px;
+              height: 28px;
+              padding: 0;
+              margin: 0;
+              border-radius: 50%;
+              cursor: pointer;
+              &:before {
+                content: '';
+                display: block;
+              }
+              &--cateTit {
+                margin: 0 auto;
+                padding: 0;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                color: $color_green;
+                font-size: 14px;
+              }
+              &--tag {
+                margin: 0;
+                padding: 0 0 0 15px;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+                color: $color_green;
+                font-size: 14px;
+              }
+              &--delete {
+                position: absolute;
+                width: 20px;
+                height: 20px;
+                top: 5px;
+                right: 5px;
+                border: 1px solid #ccc;
+                z-index: 10;
+                &:before {
+                  width: 8px;
+                  height: 8px;
+                  background: url(#{$dir_img}common/icon_delete_thin.svg) no-repeat 0 0;
+                  background-size: 100%;
+                }
+              }
+              &--upLoad {
+                top: 50%;
+                left: 50%;
+                border: 1px solid #55A619;
+                transform: translate(-50%, -50%);
+                &:before {
+                  width: 12px;
+                  height: 12px;
+                  background: url(#{$dir_img}common/icon_add_thin.png) no-repeat 0 0;
+                  background-size: 100%;
+                }
+                input {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
-//フォーム
+//Pagination
 .modPagination{
   display: flex;
     justify-content: center;
@@ -538,44 +748,171 @@
     padding: 5px;
     line-height: 1;
     &__item {
-        margin: 0 8px;
+      margin: 0 8px;
     }
     a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 28px;
-        height: 28px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 28px;
+      height: 28px;
     }
     .is-prev {
-        width: 105px;
-        border-right: 1px solid #ccc;
-        margin-right: 20px;
+      width: 105px;
+      border-right: 1px solid #ccc;
+      margin-right: 20px;
     }
     .is-next {
-        width: 105px;
-        border-left: 1px solid #ccc;
-        margin-left: 20px;
+      width: 105px;
+      border-left: 1px solid #ccc;
+      margin-left: 20px;
     }
     .is-current {
-        background: $color_blue;
-        color: #fff;
-        font-weight: bold;
-        border-radius: 5px;
+      background: $color_blue;
+      color: #fff;
+      font-weight: bold;
+      border-radius: 5px;
     }
 }
+
+
+//注文詳細
+.modDelivery{
+  &__title{
+    color: $color_blue;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+  &__title__s{
+    border-top: 1px solid #ccc;
+    margin: 40px 0 20px;
+    padding: 26px 0 0;
+  }
+  &__title__ss{
+    font-size: 12px;
+  }
+  &__status{
+    position: relative;
+    width: 670px;
+    display: flex;
+    justify-content: space-between;
+    &:before {
+      position: absolute;
+      content: "";
+      width: 580px;
+      height: 5px;
+      background: #ccc;
+      top: 0;
+      left: 45px;
+    }
+    &::after {
+      position: absolute;
+      content: "";
+      height: 5px;
+      background: $color_blue;
+      top: 0;
+      left: 45px;
+    }
+    &__10::after { width: 58px; }
+    &__20::after { width: 116px; }
+    &__30::after { width: 174px; }
+    &__40::after { width: 232px; }
+    &__50::after { width: 290px; }
+    &__60::after { width: 348px; }
+    &__70::after { width: 406px; }
+    &__80::after { width: 464px; }
+    &__90::after { width: 522px; }
+    &__100::after { width: 580px; }
+    li {
+      position: relative;
+      width: 90px;
+      text-align: center;
+      padding-top: 30px;
+      z-index: 2;
+      &::after {
+        position: absolute;
+        content: "";
+        border-radius: 100%;
+        width: 25px;
+        height: 25px;
+        background: #ccc;
+        top: -10px;
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
+      &.is-active {
+        &::after {
+          background: $color_blue;
+        }
+      }
+    }
+  }
+  &__order{
+    &__item {
+      display: flex;
+      width: 860px;
+      margin-bottom: 20px;
+    }
+    &__img{
+      width: 250px;
+      margin-right: 30px;
+    }
+    &__text{
+      width: 720px;
+    }
+    &__name {
+      color: $color_green;
+      font-size: 18px;
+    }
+    &__price {
+      font-weight: bold;
+      font-size: 18px;
+    }
+  }
+  &__sum{
+    background: #F2F2F2;
+    width: 300px;
+    padding: 15px;
+  }
+  &__cal{
+    dt {
+      float: left;
+    }
+    dd {
+      padding: 0 0 0 5em;
+      text-align: right;
+    }
+    .fsS {
+      font-size: 12px;
+    }
+    .fwB {
+      font-weight: bold;
+    }
+    .line {
+      border-top: 1px solid #999;
+      margin-top: 5px;
+      padding-top: 5px;
+    }
+  }
+}
+
 
 //カラムレイアウト
 .modCol{
   display: flex;
+  align-items: flex-start;
   flex-wrap: wrap;
   width: 1200px;
   &.col2,
   &--col2 {
     >*{
-      width: 560px;
-      margin-right: 40px;
+      width: 580px;
       margin-bottom: 40px;
+    }
+    >*:not(:nth-child(2n)){
+      margin-right: 40px;
     }
   }
   &.col3 >*{
@@ -600,3 +937,67 @@
     }
   }
 }
+
+
+
+// Checkbox
+.Checkbox {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  justify-content: center;
+  &-DummyInput {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: #FFF;
+    border:1px solid #CCC;
+  }
+  &-labelTxt {
+    margin-left: 10px;
+    display: block;
+  }
+  &:hover > .Checkbox-DummyInput{
+    background: #FFF;
+  }
+  &-Input {
+    margin: 0;
+    width: 0;
+    opacity: 0;
+    &:focus + .Checkbox-DummyInput{
+      background: #FFF;
+    }
+    &:checked + .Checkbox-DummyInput {
+      background: $color_green;
+    }
+    &:checked + .Checkbox-DummyInput::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 35%;
+      height: 2px;
+      transform: translate(-3px, 3px) rotateZ(-135deg);
+      transform-origin: 1px 1px;
+      background: #FFFFFF;
+    }
+    &:checked + .Checkbox-DummyInput::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 70%;
+      height: 2px;
+      transform: translate(-2px, 3px) rotateZ(-45deg);
+      transform-origin: 1px 1px;
+      background: #FFFFFF;
+    }
+  }
+}
+
